--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@@ -12,10 +12,15 @@
 		// Height and width values were found through trial and error
 		// ...to make modal resize (using js) look less jumpy
 		height: 90vh;
-		width: 1000px;
+		width: 80vw;
 		font-family: Arial, Helvetica, sans-serif;
 		overflow-y: auto !important;
 		overflow-x: auto !important;
+	}
+
+	.item-container--expanded {
+		left: 0px;
+		width: 95vh;
 	}
 
 	.item-content-container {
