--- a/client/src/SCSS/home/account/accountModals.scss
+++ b/client/src/SCSS/home/account/accountModals.scss
@@ -3,8 +3,8 @@
 
 .edit-account-modal-components {
 	.edit-account-modal {
-		// Must be the same as account-modals-blurred-background
-		z-index: 10;
+		// Must be the same as accountBlurredBackgorund.scss
+		z-index: 2;
 		position: fixed;
 		top: 50%;
 		left: 50%;
