Add location to bugs

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@@ -50,7 +50,7 @@
 	}
 
 	.outer-dividing-container--fixed-width-for-info {
-		width: 600px;
+		width: $edit-item-info-box-width;
 	}
 
 	.item-box {
