--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -36,6 +36,7 @@ $search-filter-sort-bar-height:  60px;
 $search-bar-height: 28px;
 $list-table-row-height: 50px;
 $top-bar-height: 46px;
+$create-item-sidebar-height: 700px;
 
 //=========
 // Widths
@@ -46,6 +47,7 @@ $create-item-sidebar-width: 500px;
 $list-sidebar-width: 300px;
 $filter-button-width: 90px;
 $options-button-width: 36px;
+$edit-item-info-box-width: 600px;
 
 //=========
 // Margins
