--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
@@ -24,13 +24,17 @@
 		border-top: none;
 		border-left: none;
 		background-color: white;
-		height: 700px;
+		height: $create-item-sidebar-height;
 		width: $create-item-sidebar-width;
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
 		overflow-y: auto !important;
 		overflow-x: hidden !important;
+	}
+
+	.create-item-sidebar--taller {
+		height: $create-item-sidebar-height + 100;
 	}
 
 	.take-up-space {
