--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -41,7 +41,7 @@ $create-item-sidebar-height: 700px;
 //=========
 // Widths
 //=========
-$home-min-width: 1000px;
+$list-table-min-width: 1100px;
 $edit-account-modal-width:  540px;
 $create-item-sidebar-width: 500px;
 $list-sidebar-width: 300px;
