Description text area no longer allows line breaks

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -20,7 +20,7 @@ $dark-blue-teal: #50798b;
 // Blue for links
 $blue-link: #005ed8;
 // Reds
-$red-link: #ff5656;
+$red-link: #f34242;
 // Components
 $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
