--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@@ -50,16 +50,16 @@
 		width: 50%;
 	}
 
-	.outer-dividing-container--full-height {
-		height: 100%;
-	}
-
 	.item-box {
 		margin: 10px;
 		border: 2px solid black;
 		background-color: $light-gray;
 		padding: 0px 20px 20px 20px;
 		overflow-wrap: anywhere;
+	}
+
+	.item--desciption-info-height {
+		height: $description-info-item-box-height;
 	}
 
 	// Used in ItemContainerEditInfo to calculate description size using JS
