--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -20,6 +20,10 @@ $dark-blue-teal: #50798b;
 // Blue for links
 $blue-link: #005ed8;
 // Reds
+$light-red: #cf8c8c;
+$bright-red: #fc1e1e;
+$dark-red: #d36464;
+$darker-red: #d84848;
 $red-link: #f34242;
 // Components
 $search-filter-sort-bar-color: $light-gray;
