--- a/client/src/SCSS/home/projects-bugs-shared/deleteItemsModal.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/deleteItemsModal.scss
@@ -57,7 +57,7 @@
 	.centered-buttons-container__delete {
 		float: left;
 		border: 1px solid black;
-		background-color: #d36464;
+		background-color: $dark-red;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
 		padding: 10px 0px 10px 0px;
@@ -71,7 +71,7 @@
 	}
 	.centered-buttons-container__delete:hover,
 	.centered-buttons-container__delete:active {
-		background-color: #d84848;
+		background-color: $darker-red;
 	}
 
 	.centered-buttons-container__cancel {
