Fixed bug where completion date could be changed when stauts was not set to completed/closed

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
@@ -162,11 +162,13 @@
 	// ...of completion date based of the status of the project
 	.grayed-out-label {
 		color: $medium-light-gray;
+		pointer-events: none;
 	}
 
 	.grayed-out-date {
 		background-color: $light-gray;
 		color: $medium-light-gray;
+		pointer-events: none;
 	}
 
 	.form__errors {
