Began frontend design for bugs to have comments

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
@@ -1,8 +1,8 @@
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
-// The ItemContainerDisplayInfo component also uses shared SCSS in itemContainer.scss
-// This file is for SCSS used only by  the ItemContainerDisplayInfo component
+// This file is for SCSS used only by the ItemContainerDisplayInfo component
+// ...SCSS shared with other components is in itemContainer.scss 
 .item-container-component {
 	.item-name {
 		padding: 13px 0px 6px 0px;
