--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
@@ -1,8 +1,8 @@
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
-// The ItemContainerEditInfo component also uses shared SCSS in itemContainer.scss
-// This file is for SCSS used only by  the ItemContainerEditInfo component
+// This file is for SCSS used only by the ItemContainerEditInfo component
+// ...SCSS shared with other components is in itemContainer.scss 
 .item-container-component {
 	.form-errors {
 		display: block;
