Refactored actions folder for redux

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
@@ -61,6 +61,10 @@
 		resize: none;
 	}
 
+	.item-box__form-textarea--shorter {
+		height: 100px;
+	}
+
 	.item-box__group__field__form-label {
 		// To make form-selects vertically parallel
 		display: inline-block;
