--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -3,6 +3,9 @@
 //=========
 // Basic
 $black: #000000;
+// Blue teals
+$light-blue-teal: #8ba8b3;
+$dark-blue-teal: #50798b;
 // Grays
 $very-light-gray: #f5f5f5;
 $light-gray: #e5e5e5;
@@ -14,9 +17,7 @@ $dark-gray: #757575;
 $very-light-blue-gray: #7390af;
 $light-blue-gray: #607c99;
 $blue-gray: #50677f;
-// Blue teals
-$light-blue-teal: #8ba8b3;
-$dark-blue-teal: #50798b;
+$dark-blue-gray: #215792;
 // Blue for links
 $blue-link: #005ed8;
 // Reds
