Finished frontend functionality for deleting comments

--- a/client/src/SCSS/home/projects-bugs-shared/deleteModal.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/deleteModal.scss
@@ -1,6 +1,6 @@
 @import "../../utils/variables";
 
-.delete-item-modal-component {
+.delete-modal-component {
 	.blurred-background {
 		// Must be the same or more than listContainerSearchFilterSortBar.scss
 		// ...and itemContainer.scss
