Refactored toggleCharCountColor function to use CSS which fixed a bug when editing comments

--- a/client/src/SCSS/app.scss
+++ b/client/src/SCSS/app.scss
@@ -2,11 +2,18 @@ html, body {
 	width: 100%;
 }
 
+//===============================
 // Bellow classes are used by JS
+//===============================
 .stop-x-y-scrolling {
 	overflow: hidden;
 }
 
 .stop-x-scrolling {
 	overflow-x: hidden;
+}
+
+// Used to turn character counters red when limit is gone over
+.text-red {
+	color: red;
 }
