--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerCommentsBoxIndividualComment.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerCommentsBoxIndividualComment.scss
@@ -8,6 +8,9 @@
 	}
 
 	.comment__block {
+		// Must be realtive so setting comment__block__centered-buttons-container
+		// ...top moves it within the context of comment_block 
+		position: relative;
 		margin: 10px 0px 10px 0px;
 	}
 
@@ -15,18 +18,63 @@
 		color: $dark-blue-gray;	
 	}
 
-	.comment__block__date {
+	/* .comment__block__date {
 		
-	}
+	} */
 
-	.comment_block__icon-button {
+	.comment__block__icon-button {
 		display: inline;
 		margin-left: 15px;
 		color: gray;
 		cursor: pointer;
 	}
-	.comment_block__icon-button:hover,
-	.comment_block__icon-button:active {
+	.comment__block__icon-button:hover,
+	.comment__block__icon-button:active {
 		color: black;
+	}
+
+	.comment__block__centered-buttons-container {
+		@include horizontal-center();
+		top: 0px;
+		width: 265px;
+	}
+
+	.comment__block__centered-buttons-container__submit-edit-button {
+		float: left;
+		border: 1px solid black;
+		background-color: $dark-red;
+		// Only top and bottom because of inconsistencies
+		// ...with button vs divs.
+		padding: 10px 0px 10px 0px;
+		// 2px bigger than cancel button because of inconsistencies
+		// ...with buttons vs divs.
+		width: 127px;
+		color: white;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		text-align: center;
+		cursor: pointer;
+	}
+	.comment__block__centered-buttons-container__submit-edit-button:hover,
+	.comment__block__centered-buttons-container__submit-edit-button:active {
+		background-color: $darker-red;
+	}
+
+	.comment__block__centered-buttons-container__cancel-button {
+		float: right;
+		border: 1px solid black;
+		background-color: #e7e7e7;
+		// Only top and bottom because of inconisistencies
+		// ...with button and div padding.
+		padding: 10px 0px 10px 0px;
+		width: 125px;
+		color: black;
+		text-align: center;
+		font-size: 16px;
+		cursor: pointer;
+	}
+	.comment__block__centered-buttons-container__cancel-button:hover,
+	.comment__block__centered-buttons-container__cancel-button:active {
+		background-color: #dad9d9;
 	}
 }
