--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -61,6 +61,7 @@ $form-input-margin-bottom: 10px;
 //==========
 // Borders
 //==========
+$search-filter-sort-bar-border-width: 1px;
 $search-bar-border-width: 1px;
 $top-bar-border-width: 1px;
 $list-sidebar-border-width: 2px;
